Fourth Commit : Student and Faculty Profile Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=1234567890
 spring.main.banner-mode=off
 
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
